examples/two-vms-separate-vnets/main.bicep
targetScope = 'resourceGroup'

@description('Entra ID object ID granted Virtual Machine Administrator Login on both VMs. Find yours with: az ad signed-in-user show --query id -o tsv. A group object ID also works (set entraAdminPrincipalType to Group).')
param entraAdminObjectId string

@description('Principal type of entraAdminObjectId. Use Group when entraAdminObjectId is an Entra group object ID.')
@allowed([
  'User'
  'Group'
  'ServicePrincipal'
])
param entraAdminPrincipalType string = 'Group'

@description('Optional SSH public key for the VM admin user. Empty means Entra ID login only; set to also allow SSH key login.')
param adminPublicKey string = ''

@description('Resource name prefix for this example deployment.')
param namePrefix string = 'separatevnet'

@description('Trusted source CIDRs allowed to SSH to lab hosts. Comma-separated IPv4 and/or IPv6 CIDRs (for example "203.0.113.5/32,2001:db8::1/128").')
param trustedSshSourceCidr string

@description('Azure region for all resources.')
param location string = resourceGroup().location

@description('Admin username for both Linux VMs.')
param adminUsername string = 'azureuser'

@description('VM size to use for both hosts.')
param vmSize string = 'Standard_B2ats_v2'

var trustedSshSourceCidrs = map(split(trustedSshSourceCidr, ','), cidr => trim(cidr))
var trustedSshV4Cidrs = filter(trustedSshSourceCidrs, cidr => !contains(cidr, ':'))
var trustedSshV6Cidrs = filter(trustedSshSourceCidrs, cidr => contains(cidr, ':'))

var sshAllowRules = concat(
  empty(trustedSshV4Cidrs) ? [] : [
    {
      name: 'allow-ssh-v4'
      properties: {
        access: 'Allow'
        direction: 'Inbound'
        priority: 100
        protocol: 'Tcp'
        sourceAddressPrefixes: trustedSshV4Cidrs
        sourcePortRange: '*'
        destinationAddressPrefix: '*'
        destinationPortRange: '22'
      }
    }
  ],
  empty(trustedSshV6Cidrs) ? [] : [
    {
      name: 'allow-ssh-v6'
      properties: {
        access: 'Allow'
        direction: 'Inbound'
        priority: 110
        protocol: 'Tcp'
        sourceAddressPrefixes: trustedSshV6Cidrs
        sourcePortRange: '*'
        destinationAddressPrefix: '*'
        destinationPortRange: '22'
      }
    }
  ]
)

var hostA = {
  name: 'hosta'
  subnetName: 'hosta-subnet'
  vnetName: '${namePrefix}-hosta-vnet'
  nsgName: '${namePrefix}-hosta-nsg'
  pipName: '${namePrefix}-hosta-pip'
  nicName: '${namePrefix}-hosta-nic'
  privateIpv4: '10.42.10.4'
  privateIp: 'fd00:10:0:1::4'
  vnetCidrV4: '10.42.10.0/24'
  vnetCidr: 'fd00:10::/48'
  subnetCidrV4: '10.42.10.0/24'
  subnetCidr: 'fd00:10:0:1::/64'
}

var hostB = {
  name: 'hostb'
  subnetName: 'hostb-subnet'
  vnetName: '${namePrefix}-hostb-vnet'
  nsgName: '${namePrefix}-hostb-nsg'
  pipName: '${namePrefix}-hostb-pip'
  nicName: '${namePrefix}-hostb-nic'
  privateIpv4: '10.42.20.4'
  privateIp: 'fd00:11:0:1::4'
  vnetCidrV4: '10.42.20.0/24'
  vnetCidr: 'fd00:11::/48'
  subnetCidrV4: '10.42.20.0/24'
  subnetCidr: 'fd00:11:0:1::/64'
}

resource hostANsg 'Microsoft.Network/networkSecurityGroups@2024-05-01' = {
  name: hostA.nsgName
  location: location
  properties: {
    securityRules: sshAllowRules
  }
}

resource hostBNsg 'Microsoft.Network/networkSecurityGroups@2024-05-01' = {
  name: hostB.nsgName
  location: location
  properties: {
    securityRules: concat(sshAllowRules, [
      {
        name: 'deny-http-from-hosta-v4'
        properties: {
          access: 'Deny'
          direction: 'Inbound'
          priority: 200
          protocol: 'Tcp'
          sourceAddressPrefix: hostA.privateIpv4
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '80'
        }
      }
      {
        name: 'deny-http-from-hosta-v6'
        properties: {
          access: 'Deny'
          direction: 'Inbound'
          priority: 210
          protocol: 'Tcp'
          sourceAddressPrefix: hostA.privateIp
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '80'
        }
      }
      {
        name: 'allow-http-lab-vnets-v4'
        properties: {
          access: 'Allow'
          direction: 'Inbound'
          priority: 300
          protocol: 'Tcp'
          sourceAddressPrefixes: [
            hostA.vnetCidrV4
            hostB.vnetCidrV4
          ]
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '80'
        }
      }
      {
        name: 'allow-http-lab-vnets-v6'
        properties: {
          access: 'Allow'
          direction: 'Inbound'
          priority: 310
          protocol: 'Tcp'
          sourceAddressPrefixes: [
            hostA.vnetCidr
            hostB.vnetCidr
          ]
          sourcePortRange: '*'
          destinationAddressPrefix: '*'
          destinationPortRange: '80'
        }
      }
    ])
  }
}

resource hostAVnet 'Microsoft.Network/virtualNetworks@2024-05-01' = {
  name: hostA.vnetName
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        hostA.vnetCidrV4
        hostA.vnetCidr
      ]
    }
    subnets: [
      {
        name: hostA.subnetName
        properties: {
          addressPrefixes: [
            hostA.subnetCidrV4
            hostA.subnetCidr
          ]
          defaultOutboundAccess: false
          networkSecurityGroup: {
            id: hostANsg.id
          }
        }
      }
    ]
  }
}

resource hostBVnet 'Microsoft.Network/virtualNetworks@2024-05-01' = {
  name: hostB.vnetName
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        hostB.vnetCidrV4
        hostB.vnetCidr
      ]
    }
    subnets: [
      {
        name: hostB.subnetName
        properties: {
          addressPrefixes: [
            hostB.subnetCidrV4
            hostB.subnetCidr
          ]
          defaultOutboundAccess: false
          networkSecurityGroup: {
            id: hostBNsg.id
          }
        }
      }
    ]
  }
}

resource hostAToHostBPeering 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-05-01' = {
  name: 'to-${hostBVnet.name}'
  parent: hostAVnet
  properties: {
    remoteVirtualNetwork: {
      id: hostBVnet.id
    }
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
  }
}

resource hostBToHostAPeering 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2024-05-01' = {
  name: 'to-${hostAVnet.name}'
  parent: hostBVnet
  properties: {
    remoteVirtualNetwork: {
      id: hostAVnet.id
    }
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
  }
}

resource hostAPip 'Microsoft.Network/publicIPAddresses@2024-05-01' = {
  name: hostA.pipName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
    publicIPAddressVersion: 'IPv6'
  }
}

resource hostBPip 'Microsoft.Network/publicIPAddresses@2024-05-01' = {
  name: hostB.pipName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
    publicIPAddressVersion: 'IPv6'
  }
}

resource hostANic 'Microsoft.Network/networkInterfaces@2024-05-01' = {
  name: hostA.nicName
  location: location
  dependsOn: [
    hostAVnet
  ]
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfigv4'
        properties: {
          primary: true
          privateIPAllocationMethod: 'Static'
          privateIPAddress: hostA.privateIpv4
          privateIPAddressVersion: 'IPv4'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', hostA.vnetName, hostA.subnetName)
          }
        }
      }
      {
        name: 'ipconfigv6'
        properties: {
          primary: false
          privateIPAllocationMethod: 'Static'
          privateIPAddress: hostA.privateIp
          privateIPAddressVersion: 'IPv6'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', hostA.vnetName, hostA.subnetName)
          }
          publicIPAddress: {
            id: hostAPip.id
          }
        }
      }
    ]
  }
}

resource hostBNic 'Microsoft.Network/networkInterfaces@2024-05-01' = {
  name: hostB.nicName
  location: location
  dependsOn: [
    hostBVnet
  ]
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfigv4'
        properties: {
          primary: true
          privateIPAllocationMethod: 'Static'
          privateIPAddress: hostB.privateIpv4
          privateIPAddressVersion: 'IPv4'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', hostB.vnetName, hostB.subnetName)
          }
        }
      }
      {
        name: 'ipconfigv6'
        properties: {
          primary: false
          privateIPAllocationMethod: 'Static'
          privateIPAddress: hostB.privateIp
          privateIPAddressVersion: 'IPv6'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', hostB.vnetName, hostB.subnetName)
          }
          publicIPAddress: {
            id: hostBPip.id
          }
        }
      }
    ]
  }
}

resource hostAVm 'Microsoft.Compute/virtualMachines@2024-07-01' = {
  name: '${namePrefix}-${hostA.name}'
  location: location
  identity: {
    type: 'SystemAssigned'
  }
  properties: {
    hardwareProfile: {
      vmSize: vmSize
    }
    osProfile: {
      computerName: '${namePrefix}-${hostA.name}'
      adminUsername: adminUsername
      customData: base64('''
        #cloud-config
        package_update: true
        packages:
          - curl
          - dnsutils
          - iperf3
          - iputils-ping
          - net-tools
          - netcat-openbsd
          - python3
          - traceroute
        runcmd:
          - [bash, -lc, "echo hosta > /etc/lab-hostname"]
      ''')
      linuxConfiguration: {
        disablePasswordAuthentication: true
        ssh: empty(adminPublicKey) ? null : {
          publicKeys: [
            {
              path: '/home/${adminUsername}/.ssh/authorized_keys'
              keyData: adminPublicKey
            }
          ]
        }
      }
    }
    storageProfile: {
      imageReference: {
        publisher: 'Canonical'
        offer: '0001-com-ubuntu-server-jammy'
        sku: '22_04-lts-gen2'
        version: 'latest'
      }
      osDisk: {
        createOption: 'FromImage'
        managedDisk: {
          storageAccountType: 'StandardSSD_LRS'
        }
      }
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: hostANic.id
        }
      ]
    }
  }
}

resource hostAVmAadLogin 'Microsoft.Compute/virtualMachines/extensions@2024-07-01' = {
  name: 'AADSSHLoginForLinux'
  parent: hostAVm
  location: location
  properties: {
    publisher: 'Microsoft.Azure.ActiveDirectory'
    type: 'AADSSHLoginForLinux'
    typeHandlerVersion: '1.0'
    autoUpgradeMinorVersion: true
  }
}

resource hostAVmAdminLogin 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(hostAVm.id, entraAdminObjectId, 'vm-admin-login')
  scope: hostAVm
  properties: {
    roleDefinitionId: subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '1c0163c0-47e6-4577-8991-ea5c82e286e4')
    principalId: entraAdminObjectId
    principalType: entraAdminPrincipalType
  }
}

resource hostBVm 'Microsoft.Compute/virtualMachines@2024-07-01' = {
  name: '${namePrefix}-${hostB.name}'
  location: location
  identity: {
    type: 'SystemAssigned'
  }
  properties: {
    hardwareProfile: {
      vmSize: vmSize
    }
    osProfile: {
      computerName: '${namePrefix}-${hostB.name}'
      adminUsername: adminUsername
      customData: base64('''
        #cloud-config
        package_update: true
        packages:
          - curl
          - dnsutils
          - iperf3
          - iputils-ping
          - net-tools
          - netcat-openbsd
          - python3
          - traceroute
        runcmd:
          - [bash, -lc, "echo hostb > /etc/lab-hostname"]
          - [bash, -lc, "nohup python3 -m http.server 80 --bind :: >/var/log/http80.log 2>&1 &"]
      ''')
      linuxConfiguration: {
        disablePasswordAuthentication: true
        ssh: empty(adminPublicKey) ? null : {
          publicKeys: [
            {
              path: '/home/${adminUsername}/.ssh/authorized_keys'
              keyData: adminPublicKey
            }
          ]
        }
      }
    }
    storageProfile: {
      imageReference: {
        publisher: 'Canonical'
        offer: '0001-com-ubuntu-server-jammy'
        sku: '22_04-lts-gen2'
        version: 'latest'
      }
      osDisk: {
        createOption: 'FromImage'
        managedDisk: {
          storageAccountType: 'StandardSSD_LRS'
        }
      }
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: hostBNic.id
        }
      ]
    }
  }
}

resource hostBVmAadLogin 'Microsoft.Compute/virtualMachines/extensions@2024-07-01' = {
  name: 'AADSSHLoginForLinux'
  parent: hostBVm
  location: location
  properties: {
    publisher: 'Microsoft.Azure.ActiveDirectory'
    type: 'AADSSHLoginForLinux'
    typeHandlerVersion: '1.0'
    autoUpgradeMinorVersion: true
  }
}

resource hostBVmAdminLogin 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(hostBVm.id, entraAdminObjectId, 'vm-admin-login')
  scope: hostBVm
  properties: {
    roleDefinitionId: subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '1c0163c0-47e6-4577-8991-ea5c82e286e4')
    principalId: entraAdminObjectId
    principalType: entraAdminPrincipalType
  }
}

output hostAPublicIp string? = hostAPip.properties.ipAddress
output hostBPublicIp string? = hostBPip.properties.ipAddress
output hostAPrivateIp string = hostA.privateIp
output hostBPrivateIp string = hostB.privateIp
output blockedFlow string = 'Traffic from ${hostA.privateIp} to ${hostB.privateIp}:80 is denied by ${hostBNsg.name}/deny-http-from-hosta-v6'
